# px390

./: .gitignore  CMakeLists.txt  README.md
Assignment1/: 1.c  2.c  3.c  4.c  5.c  CMakeLists.txt
Assignment2/: 1.c  2.c  3.c  4.c  5.c  CMakeLists.txt
Assignment3/: Assignment3.c  CMakeLists.txt  input.txt
Assignment4/: Assignment4.c  CMakeLists.txt  coefficients.txt  input.txt
Kata/: CMakeLists.txt
Kata/Fibonacci/: CMakeLists.txt  fibonacci.c
Kata/Functional/: CMakeLists.txt  functional.c  functions.c  functions.h  less_functional.c
Kata/LinkedList/: CMakeLists.txt  LinkedList.c
Practice/: 1.c  2.c  3.c  4.c  CMakeLists.txt
