cmake_minimum_required(VERSION 2.8)

macro(use_c99)
    if (CMAKE_VERSION VERSION_LESS "3.1")
        if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
            set (CMAKE_C_FLAGS "-std=gnu99 ${CMAKE_C_FLAGS}")
        endif ()
    else ()
        set (CMAKE_C_STANDARD 99)
    endif ()
endmacro(use_c99)

macro(set_compiler_flags)
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
        set (CMAKE_C_FLAGS "-x c -Wall -Werror ${CMAKE_C_FLAGS}")
    endif ()
endmacro(set_compiler_flags)

macro(lm)
    if (CMAKE_C_COMPILER_ID STREQUAL "GNU")
        set (CMAKE_C_FLAGS "-lm ${CMAKE_C_FLAGS}")
    endif ()
endmacro()

add_subdirectory(Kata)
add_subdirectory(Practice)
